# ugc

./: .gitignore  Cargo.toml  readme.md
src/: main.rs
static/: about.html  contact.html  index.html  portfolio.html  services.html
static/css/: style.css
static/js/: contact.js  main.js  portfolio.js
