[package]
name = "ugc_portfolio"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
tower = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder"] }
dotenvy = "0.15"
